# DeepLearningBasics

./: .gitignore  A basic network.ipynb  Autoencoders.ipynb  Basic CNN.ipynb  DC-GAN.ipynb  README.md  ResNets.ipynb  VAEs.ipynb  cat_data_utils.py  pyproject.toml
1 - Multilayer Perceptrons/: Basic MLP 2 - data handling.ipynb
1 - Multilayer Perceptrons/.ipynb_checkpoints/: Basic MLP-checkpoint.ipynb
2 - ConvNet/: Basic CNN.ipynb
3 - ResNet/: ResNets.ipynb
4 - Autoencoder/: Autoencoders.ipynb
5 - VAEs/: VAEs.ipynb
6 - GANs/.ipynb_checkpoints/: DC-GAN-checkpoint.ipynb
Misc/: rectifiers.m
forecasting/: arima.ipynb  prophet.ipynb
sklearn/: knn_pipeline_optimization.ipynb  readme.md
