[tool.poetry]
name = "deep-learning-basics"
version = "0.1.0"
description = ""
authors = ["Kenny Chou <kennethfchou@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_learning_basics"}]


[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.2"
keras = "^2.11.0"
jupyter = "^1.0.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
prophet = "^1.1.2"
plotly = "^5.13.1"
statsmodels = "^0.13.5"
pmdarima = "^2.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.253"
black = "^23.1.0"
mypy = "^1.0.1"
pre-commit = "^3.1.1"
pytest = "^7.2.1"

[tool.mypy]
files = "."
strict = true
pretty = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
fix = true
line-length = 88
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle / flake8-docstrings
    "E",  # pycodestyle
    "F",  # pyflakes / flake8
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle
]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"